--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,11 +2,12 @@
 <footer class="footer">
  
  <div class="row">
-  <div class="span4">
+  <div class="span6">
   <small>
    <p> Thrill Engine is All About Trips That Will Make You Feel Alive.  <%= link_to "The story so far →", about_path %> </p>
     Thrill Engine &copy; 2012  
-    <%= link_to "Terms & Privacy", about_path %>    
+    <%= link_to "FAQ", about_path %>
+    <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px; margin-top:15px; " allowtransparency="true"></iframe>    
   </small>     
   </div>
   <div class="span2">
@@ -17,15 +18,7 @@
       <li> <%= link_to "France", '#' %>  </li>
       <li> <%= link_to "Portugal", '#' %>  </li>
     </ul>
-  </div>
-  <div class="span2">
-     <ul>
-      <li> Thrills:  </li>
-      <li> <%= link_to "Kiteboarding", "#" %>  </li>      
-      <li> <%= link_to "Surfing", '#' %>  </li>
-      <li> <%= link_to "Snowboard/Ski", '#' %>  </li>
-    </ul>
-  </div>	
+  </div>  	
   <div class="span4"> 
     <ul>      
       <li> Get in touch:  </li>
