--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -8,100 +8,145 @@ $lightGray: #999;
 
 /* header */
 
-.navbar-inner {
-	background: #fff;
-	height: 60px;
-	.pull-right {
-		margin-top:10px;
-	}
-	
-}
-
-.subnav {
-	background: #efefef;
-	.pull-right {
-		margin-top:6px;
-		margin-right:9px;
-	}
-}
-
-.subnav-fixed {
-    position: fixed;
-    top: 40px;
-    margin-top: 20px;
-    left: 0;
-    right: 0;
-    z-index: 1020; /* 10 less than .navbar-fixed to prevent any overlap */
-    border-color: #d5d5d5;
-    border-width: 0 0 1px; /* drop the border on the fixed edges */
-    -webkit-border-radius: 0;
-       -moz-border-radius: 0;
-            border-radius: 0;
-    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-       -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-            box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); /* IE6-9 */
-  }
-  .subnav-fixed .nav {
-    width: 938px;
-    margin: 0 auto;
-    padding: 0 1px;
-    top: 10px;
-  }
-  .subnav .nav > li:first-child > a,
-  .subnav .nav > li:first-child > a:hover {
-    -webkit-border-radius: 0;
-       -moz-border-radius: 0;
-            border-radius: 0;
-  }
-
 .nav-pills {
-	font-size:14px;
+	font-size:12px;
 	font-weight:bold;
-	
+	margin-top: -25px;
+	border-radius: 0px;
 }
+
+
+.nav-pills li  a {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  color: #5e5a5a ;
+  
+}
+
+
+.nav-pills a:hover {
+  
+ background:none;
+ text-decoration:underline;
+}
+
+
 
 #logo {
-  float: left;
-  margin-right: 20px;  
-  margin-top: 16px;  
-  line-height: 1;  
+  
+    margin-left:5px;
+     
 }
 
-.navbar-search {
-	
-	margin-top: 15px;
-	
-	
-}
 
-.jumbotron {
-	
-	
-		
-}
 
-.slider {
+
+.headline {
 	
-	background: url(sp5.jpg);
-	height: 258px;
-	padding: 40px;
+    margin-top: -310px;
+	position: absolute;
+	margin-left:60px;	
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    text-shadow: 0px 0px 21px rgba(0, 0, 0, 0.6);
+	padding: 20px;
 	color: #fff;
-	box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);    
-    border: 1px solid #D4D4D4;
-    border-top-width: 1px;
-    border-right-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-top-style: solid;
-    border-right-style: solid;
-    border-bottom-style: solid;
-    border-left-style: solid;
-    border-top-color: #D4D4D4;
-    border-right-color: #D4D4D4;
-    border-bottom-color: #D4D4D4;
-    border-left-color: #D4D4D4;
 }
+
+.lead {
+	
+	font-weight: bold;
+	
+	
+}
+
+.carousel-caption2 {
+	
+	background: none;
+	color: #fff;
+	font-size: 24px;	
+	text-shadow: 0 0 12px rgba(0, 0, 0.9, 0.8);
+	position: absolute;
+    left: 65px;
+    right: 0;
+    bottom: 0;
+    top: 260px;
+    padding: 10px 15px 5px;
+	
+}
+
+
+#myCarousel {
+	
+	
+	box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);   
+	
+}
+
+.carousel-control2{
+	
+
+  position: absolute;
+  top: 40%;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  margin-top: -10px;
+  
+  
+  
+    		
+}
+
+.carousel-control2.left {
+	
+	background:url(left2.png) no-repeat ;
+	height:59px;
+	width:59px;
+	left:10px; 
+	
+	
+}
+
+
+.carousel-control2.right {
+	
+	
+    left:auto;
+    right:-10px;
+	background:url(right2.png) no-repeat ;	
+    height:59px;
+	width:59px;
+}
+
+
+.listed {	
+   cursor:pointer;
+   border: none;
+   padding: 5px 30px;
+   border-radius: 0px;
+   background: #7accff;
+   border: #ff0000;
+   color: #fff;
+   font-weight: bold; 
+   
+}
+
+
+
+
+.droper {
+	
+	float:left;
+	margin-left: 15px;
+	list-style: none;
+	
+}
+
+
 
 
 
@@ -117,8 +162,10 @@ html {
 }
 
 body {
-  margin-top: 100px;
-  background: url(col4.png);
+  margin-top: 50px;
+  background: url(lp.png);
+  
+  
   
 }
 
@@ -137,7 +184,11 @@ textarea {
   }  
 }
 
-
+.border {
+	
+	border-right: 1px dotted $grayMediumLight;
+	border-left: 1px dotted $grayMediumLight;
+}
 
 /* typography */
 
@@ -146,10 +197,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 6em;
+  font-size: 5em;
   letter-spacing: -2px;
-  margin-bottom: 30px;
-  
+  margin-bottom: 10px;
+  color: #fff;
 }
 
 h2 {
@@ -196,29 +247,7 @@ footer {
   }
 }
 
-/* sidebar */
 
-aside {
-  section {
-    padding: 10px 0;
-    border-top: 1px solid $grayLighter;
-    &:first-child {
-      border: 0;
-      padding-top: 0;
-    }
-    span {
-      display: block;
-      margin-bottom: 3px;
-      line-height: 1;
-    }
-    h1 {
-      font-size: 1.6em;
-      text-align: left;
-      letter-spacing: -1px;
-      margin-bottom: 3px;
-    }
-  }
-}
 
 /* forms */
 
@@ -248,10 +277,11 @@ input, textarea, select, .uneditable-input {
 /* trips index */
 
 
+
 .trip {
   list-style: none;
-  margin-left: 10px;
-  margin-right:16px;
+  margin-left: 0px;
+  margin-right:0px;
   background: #fff;
   display: block;
   padding: 10px;
@@ -282,13 +312,13 @@ input, textarea, select, .uneditable-input {
   }	
  
 .price {	
-	margin-left:314px;
+	margin-left:334px;
 	margin-top:-45px;
 }  
   
 .trip img {	
-	width: 420px;
-	height: 318px;	
+	width: 440px;
+	height: 310px;	
 }
 
 
@@ -309,8 +339,7 @@ input, textarea, select, .uneditable-input {
 }
 	
 .item img {	
-	width: 360px;
-	height: 268px;
+	
 	
 }
 
