--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,12 @@
-<header class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
+<header>
+  
     <div class="container">
       <%= link_to logo, root_path, id: "logo" %>      
       <nav>
-        <ul class="nav pull-right">
+        <ul class="nav pull-right nav-pills">
+          <li> <%= link_to "All Locations", locations_path %>  </li>
           <li> <%= link_to "The Concept", about_path %>  </li>
-          <li><%= link_to "Get Listed", pricing_path, :class => "btn btn-warning" %>  </li>
+          <li><%= link_to "Get Listed", pricing_path, :class => "listed" %>  </li>
           <li><%= link_to "Contact", about_path %>  </li>
          <% if signed_in? %>
           <li><%= link_to "Profile", current_user %>  </li>
@@ -18,7 +19,7 @@
         </ul>
       </nav>
     </div>
-  </div>
+  
 </header>
 
 
