--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,53 +1,68 @@
 <header class="jumbotron subhead" id="overview">
-  <div class="slider">
-  <h1> Epic Holidays  </h1>  
-  <p class="lead"> Find a Place to Stay for Your Next Adventures </p>
-  </div>  
-</header>
+  
     
-  <div class="subnav"> 
-   <ul class="nav nav-pills">            
-            <li> <a href="categories/3">Kiteboarding</a> </li>      
-            <li> <a href="categories/1">Surfing</a> </li>
-            <li> <a href="categories/2">Snow</a>  </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">All Types of Places <b class="caret"></b></a>
-              <ul id="menu1" class="dropdown-menu">
-                <li><a href="#">Hotels</a></li>
-                <li><a href="#">Hostels</a></li>
-                <li><a href="#">B&B</a></li>               
-                <li><a href="#">Vacation rental</a></li>
-                <li><a href="#">Camp</a></li>
-              </ul>
-            </li>            
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">All Countries <b class="caret"></b></a>
-              <ul id="menu2" class="dropdown-menu">
-                <li><a href="#">France</a></li>
-                <li><a href="#">Portugal</a></li>
-                <li><a href="#">Morocco</a></li>                
-                <li><a href="#">Dom. Rep.</a></li>
-              </ul>
-            </li>            
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#"> All Budgets <b class="caret"></b></a>
-              <ul id="menu3" class="dropdown-menu">
-                <li><a href="#">Budget</a></li>
-                <li><a href="#">Semi-Lux</a></li>
-                <li><a href="#">Lux</a></li>               
-              </ul>
-            </li>
-          </ul>
-       </div> 
-    </header>    
-   <br></br>
   
+  <div id="myCarousel" class="carousel slide">
+            <div class="carousel-inner">              
+              
+              <div class="item active">
+                <%= image_tag("srfsld2.jpg") %>               
+                <div class="carousel-caption2">
+                <p> <strong> <a href="categories/1">Surfing</a> </strong> </p>                  
+                </div>
+              </div>
+              <div class="item">
+                 <%= image_tag("ktsld4.jpg") %>                
+                 <div class="carousel-caption2">
+                <p> <strong> <a href="categories/3">Kiteboarding</a>  </strong> </p>           
+                 </div>
+              </div>
+              <div class="item">
+                <%= image_tag("snbsldl3.jpg") %>                
+                <div class="carousel-caption2">
+               <p> <strong> <a href="categories/2">Snowboarding/Ski</a> </strong> </p>               
+                </div>
+              </div>
+            </div>
+            <a class="left carousel-control2" href="#myCarousel" data-slide="prev"></a>
+            <a class="right carousel-control2" href="#myCarousel" data-slide="next"></a>          
+          </div>
   
-     
-           
+              <div class="headline">    
+                <h1> Epic Holidays  </h1>  
+                <p class="lead"> Find the Right Place to Go for Your Next Adventure </p>  
+              </div>
+  
+   
+
+ 
+ </header> 
+ 
+ 
+ 
+  <div class="border">    
+   
+         <ul>                        
+             <%= form_for @search do |f| %>             
+                 
+                <li class="droper"> Search by <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
+                <li class="droper"> for  <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories"  %>  </li>     
+                <li class="droper"> find <%= submit_tag "", :class => "icon-search" %> </li>
+      	
+           <% end %>
+         </ul>
+  
+    
+  
+   <div style="clear:both;"></div>
+ 
+      
+
+<br></br>    
     
     <% for trip in @trips %>
-    
+   
+  
     <div class="span6">
       <ul class="thumbnails">
         <li class="span6">
@@ -60,7 +75,7 @@
              
             </div>
           </div>
-
+    
              <% medium_url = trip.medium_url %>
     	       <% if medium_url %>
     	       <%= image_tag medium_url %>
@@ -68,17 +83,19 @@
         </li>        
       </ul>
     </div>
-    
+   
    <% end %>
-    
-    
+  
+     
     <div style="clear:both;"></div>
     
    
 
- 
+ </div>
  
  <br></br>
+ 
+ 
  
  <div class="pg">
  <%= will_paginate%>
