--- a/app/views/message_mailer/send_message.text.erb
+++ b/app/views/message_mailer/send_message.text.erb
@@ -1,3 +1,3 @@
 MessageMailer#send_message
 
-<%= @message.message %>, <%= @message.email %>, <%= @message.name %>
+<%= @message.body %>, <%= @message.email %>, <%= @message.name %>
