--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -45,9 +45,10 @@
          <ul>                        
              <%= form_for @search do |f| %>             
                  
-                <li class="droper"> Search by <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
-                <li class="droper"> for  <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories"  %>  </li>     
-                <li class="droper"> find <%= submit_tag "", :class => "icon-search" %> </li>
+                <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
+                <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories"  %>  </li>     
+                
+                <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
       	
            <% end %>
          </ul>
