--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -49,91 +49,71 @@
   <div class="span6">
     <div id="galleria">
      <% for image in @trip.images %>	
-	 <%= link_to image_tag(image.image.url(:thumb)), image.image.url(:large), :title => image.title %>
+	 <%= link_to image_tag(image.image.url(:thumb)), image.image.url(:large), :desc => image.title %> 
+	 
 	 <% end %>
     </div>
     <script>
         
         Galleria.run('#galleria');
         Galleria.configure({
-             minScaleRatio: 1,
-             maxScaleRatio: 1,
-            
+             minScaleRatio: 1.5,
+             maxScaleRatio: 3,
+             
              
        });
+       
+   
+       
     </script>
+   </div>
   </div>
   
   <div class="span5">
-  	<form class="form-horizontal">
-        <fieldset>
+  	 <div class="booking">
+  	 	<p> <b> Reserve Online: </b> </p>
  	
- 	
- 	
-   
-   
-   
-   
-                                                
-   
-   <%= form_for :messages , :url => messages_path(@message), :html => {:method => :post} do |f| %>
- 
- 
-       
-  <div class="control-group">
-    <div class="controls">
-       <h3>	RESERVE ONLINE</h3>
-   </div>
- </div>
- 
-  <div class="control-group">
-    <div class="controls">
-    <%= f.text_field :name, :class => "input-xlarge", :id => "input01", :placeholder => "Name:" %>
-  </div>
- </div>
+ 	<%= form_for([@trip, @trip.messages.build]) do |f| %>
   
-  <div class="control-group">
-    <div class="controls">
-    <%= f.text_field :email, :class => "input-xlarge", :id => "input01", :placeholder => "Email:" %>
-  </div>
- </div> 
-  
-  <div class="control-group">
-    <div class="controls">
-    <%= f.text_field :subject, :class => "input-xlarge", :id => "input01", :value => "nameoftheplace" %>
-  </div>
- </div> 
-  
+    <%= f.text_field :name, :class => "span3", :placeholder => "Name:" %>
  
   
-
-  <div class="control-group">
-     <div class="controls">            
-    <%= f.text_area :message, :class => "input-xlarge", :id => "textarea", :rows => "3", :placeholder => "Message" %>
-  </div>
- </div>
- 
- 
- 
- <div class="control-group">
- 	<div class="controls">    
+   
+    <%= f.text_field :email, :class => "span3", :placeholder => "Email:" %>
+   
+   <div class="h"> 
+   
+    <%= f.text_field :subject, :class => "h", :value => (@trip.title) %>
+   
+   </div>  
+   
+    <%= f.text_area :body, :class => "input-xlarge3", :placeholder => "Message:", :id => "textarea", :rows => "3" %>
+    
+      
     <%= f.submit :class => " btn btn-primary btn-large ", :value => "Send Message" %>
-    </div>
- </div>
-  
+    
+           
+ 
 <% end %>
-</div>
 
-  </fieldset>
- </form>
+    
+ 	 
+ 	<p> <%= link_to "Visit Website", (@trip.url) %>  </p> 
+ 	
+ 
+ 	                                
+  </div>
 </div>  
 
- 
- 
+
+
+
 
 </div>
 
-<br></br>
+
+
+
 
 
 
@@ -257,6 +237,7 @@
 </div>
 
 
+
 <div id="myModal" class="modal hide fade" style="display: none; ">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">×</button>
@@ -308,15 +289,20 @@
  </div>
   
 <% end %>
-</div>
 
+  <div class="control-group">
+ 	<div class="controls">    
+    <%= link_to "Visit Website", (@trip.url) %>
+    </div>
+ </div>
+
+</div>
   </fieldset>
  </form> 
                
       
             
-            <div class="modal-footer">
-              <p>  By clicking 'Send Message' you are agreeing to the Terms and Conditions   </p>
+            <div class="modal-footer">              
               <a href="#" class="btn" data-dismiss="modal">Close</a>
             </div>
           </div>
