--- a/app/assets/stylesheets/galleria.classic.css
+++ b/app/assets/stylesheets/galleria.classic.css
@@ -9,13 +9,16 @@
 .galleria-container {
     position: relative;
     overflow: hidden;
-    background: #fff;
+    
+    
     
 }
 .galleria-container img {
     -moz-user-select: none;
     -webkit-user-select: none;
     -o-user-select: none;
+    
+    
 }
 .galleria-stage {
     position: absolute;
@@ -24,6 +27,8 @@
     left: 0px;
     right: 10px;
     overflow:hidden;
+    background:#efefef;
+    
 }
 .galleria-thumbnails-container {
     height: 50px;
@@ -49,7 +54,7 @@
 }
 .galleria-counter {
     position: absolute;
-    bottom: 10px;
+    bottom: 400px;
     left: 10px;
     text-align: right;
     color: #fff;
@@ -70,14 +75,14 @@
 .galleria-info {
     width: 50%;
     top: 375px;
-    left: 10px;
+    left: 35px;
     z-index: 2;
     position: absolute;
 }
 .galleria-info-text {
-    background-color: #000;
+    background: url(im3.png);
     padding: 12px;
-    display: none;
+    
     /* IE7 */ zoom:1;
 }
 .galleria-info-title {
@@ -87,9 +92,10 @@
     margin-bottom: 7px;
 }
 .galleria-info-description {
-    font: italic 12px/1.4 georgia,serif;
+    font: italic 16px/1.4 georgia,serif;
     margin: 0;
-    color: #bbb;
+    color: #fff;
+    display: block;
 }
 .galleria-info-close {
     width: 9px;
@@ -132,7 +138,7 @@
 .galleria-image-nav {
     position: absolute;
     top: 50%;
-    margin-top: -62px;
+    margin-top: 115px;
     width: 100%;
     height: 62px;
     left: 0;
@@ -151,10 +157,13 @@
 }
 .galleria-image-nav-right {
     left: auto;
-    right: 10px;
+    right: 390px;    
     background-position: -254px 46px;
     z-index: 2;
 }
+
+
+
 .notouch .galleria-image-nav-left:hover,
 .notouch .galleria-image-nav-right:hover {
     opacity: 1;
