--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing message</h1>
+<h1>Editing trip</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @message %> |
-<%= link_to 'Back', messages_path %>
+<%= link_to 'Show', @trip %> |
+<%= link_to 'Back', trips_path %>
