--- a/app/views/message_mailer/send_message.text.erb
+++ b/app/views/message_mailer/send_message.text.erb
@@ -1,3 +1,11 @@
 MessageMailer#send_message
 
-<%= @message.body %>, <%= @message.email %>, <%= @message.name %>
+Yeah baby!!!!!
+
+
+Name:   <%= @message.name %> 
+ 
+Email: <%= @message.email %>  
+  
+Message:  <%= @message.body %>   
+__________________________________          
