--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing trip</h1>
+
+<div class="tripshow">
+
+<h2>Opps, You've missed something</h2>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @trip %> |
 <%= link_to 'Back', trips_path %>
+
+</div>
