--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,57 +1,61 @@
 <div class="tripshow">
+  
+  <div class="abouth">
+    <h2> Thril Engine helps you find the right places to go for your next adventure trip. Find by type of activity, budget and location.</h2>
+  </div>
+
+<br></br>
+
+ <div class="row">
+  <div class="span9">
+  <h3>Why thrill engine?</h3>
+  <p>  Because life begins at the end of you comfort zone.
+Even tough traveling is essential part of adventorous lifestyle, it can be quite boring. Thrill Engine brings you the opposite, with more focus on the activities than the stay. 
+  </p>
+
+<br></br>
+
+  <h3>How it is different ?</h3>
+  <p>  Most travel sites are all about offering you the best price for the same listings. Thrill Engine is all about offering the best solution for your surf, snow, kite trips.
+Thrill engine works directly with listing owners.   
+  </p> 
+
+<br></br>
+
+  <h3> How much does it costs to get listed?</h3>
+  <p>  Starting at 99$ yearly.  </p>
+  <p> Which includes: </p>
+
+    <ul>
+	   <li> Unlimited images   </li>
+	   <li>  a video  </li>
+	   <li> link back to your website   </li>
+	   <li>  weekly placement in the front page  </li>
+	   <li> better rankings in category and location pages  </li>
+    </ul>
+
+<br></br>
+
+  <h3> Why pay ?</h3>
+  <p>  That keeps the site high quality. You are one of few not one of many. It takes a lot of time and energy to check every listing. However there is a free plan with limited options available as well, please contact me for more info. </p>
+  <p> 99 per year is still less than competitors, and free sites are open for everyone. </p>
+
+<br></br> 
 
 
-<div class="mbox"
+  <h3> How will be promoted ? </h3>
+  <p> Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), trough social media, and weekly email lists. </p>
 
-<h3> Remember the last time when you were traveling with friends, getting into adventures and thinking to yourself - Damn, this is life? Thrill Engine is here to give just that and lot's of it!
+<br></br>
 
+  <h3> Who is behind this ? </h3>
+  <p> Thrill Engine is developed, designed and promoted by <%= link_to "http://emiilsw.staticloud.com", "http://emiilsw.staticloud.com/" %> .</p>
 
- </h3>
+<br></br>
 
+  <h3> Contact: </h3>
+  <p>  <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </p>
  
-
-</div>
-
-<div class="story">
-
-
-
-
-
-
-<h2>THE STORY SO FAR:</h2>
-
-
-<h4> Thrill Engine currently is a work in progress, one man operation. Built for finding unique life changing, travel experiences, based on action sports. Only 10% ready, but already open for bookings with a purpose to understand you better and to build things that matter. The best is yet to come - <%= link_to "sign up to follow updates ", trips_path %>   </h4>
-
-<br></br>
-
-<h4> Ohh and if you like what you see and think you can help, just let me know. I could use some tech help.  </h4>
-
-<br></br>
-
-<h2>HOW IT WORKS:</h2>
-<h4>  In the current version all the bookings are handled manually - just email me about booking inquiry and I’ll give you details about full pricing and availability </h4> 
-<br></br>
-
-<h4> However, if you don’t feel comfortable with the fact that this project is still largely under development, then I advise you to book directly from the property owners or similar services (just google the name of the houses). But for all the others I am open to help you find  <%= link_to "the best trip you ever had!", trips_path %> </h4>
-
-
-
-<br></br>
-
-
-
-<h2> PRIVACY & TERMS:</h2>
-<h4>  Long lines of text that no one will read will come soon, but I will simply summarize the most important stuff, now - I have absolutely no intentions to screw with you and the same I expect from you as well. Your information will not be exposed to third parties.   </h4>
-
-
-<br></br>
-<h2> CONTACT:</h2>
-<h4> If the text above doesn't make sense to you or you simply have questions/feedback/suggestions or whatever, feel free to drop me a line :) - <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %> </h4>  
-<br></br>
-
-</div>
-
-
+   </div>
+ </div>
 </div>
