--- a/app/assets/stylesheets/galleria.classic.css
+++ b/app/assets/stylesheets/galleria.classic.css
@@ -75,7 +75,7 @@
 .galleria-info {
     width: 50%;
     top: 375px;
-    left: 35px;
+    left: 235px;
     z-index: 2;
     position: absolute;
 }
@@ -138,7 +138,7 @@
 .galleria-image-nav {
     position: absolute;
     top: 50%;
-    margin-top: 115px;
+    margin-top: -62px;
     width: 100%;
     height: 62px;
     left: 0;
@@ -157,7 +157,7 @@
 }
 .galleria-image-nav-right {
     left: auto;
-    right: 390px;    
+    right: 10px;    
     background-position: -254px 46px;
     z-index: 2;
 }
@@ -234,15 +234,15 @@
 
 .booking {
     
-    height: 280px;
-    width: 228px;
+    
     z-index: 2;
-    left:970px;
-    padding:20px;
-    top:320px;
+    right: 330px;
+    padding:5px;
+    width: 250px;
+    top:320px;   
     position: absolute;
     overflow: hidden;
-    background-image: url("wt.png");
+    background: url(lp.png);
     -moz-box-shadow: 2px 5px 7px #111;
     -webkit-box-shadow: 2px 5px 7px #111;
     box-shadow: 2px 5px 7px #111;
