--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -83,39 +83,7 @@
   
   <div class="span5">
   	 <div class="booking">
-  	 	<p> <b> Reserve Online: </b> </p>
- 	
- 	<%= form_for([@trip, @trip.messages.build]) do |f| %>
- 	
- 	<%= render 'shared/error_messages', object: f.object %>
-  
-    <%= f.text_field :name, :class => "span3", :placeholder => "Name:" %>
- 
-  
-   
-    <%= f.text_field :email, :class => "span3", :placeholder => "Email:" %>
-   
-   <div class="h"> 
-   
-    <%= f.text_field :subject, :class => "h", :value => (@trip.title) %>
-   
-   </div>  
-   
-    <%= f.text_area :body, :class => "input-xlarge3", :placeholder => "Message:", :id => "textarea", :rows => "3" %>
-    
-      
-    <%= f.submit :class => " btn btn-primary btn-large ", :value => "Send Message" %>
-    
-           
- 
-<% end %>
-
-    
- 	 
- 	<p> <%= link_to "Visit Website", (@trip.url) %>  </p> 
- 	
- 
- 	                                
+  	 	<a class="book_button" data-toggle="modal" href="#myModal" > Reserve Online </a> 	 	                                
   </div>
 </div>  
 
@@ -250,59 +218,88 @@
 
 </div>
 
-
+  
 
 <div id="myModal" class="modal hide fade" style="display: none; ">
+            
+        
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">×</button>
-              <h3>RESERVE ONLINE</h3>
+              <h3>Contact these guys</h3>
             </div>
             <div class="modal-body">
+              
+              <%= form_for([@trip, @trip.messages.build]) do |f| %> 
+              
               <form class="form-horizontal">
           <fieldset>
  	  
-              <%= form_for :messages do |f| %>
+    <br></br>      
  
   <div class="control-group">
     <div class="controls">
-    <%= f.text_field :name, :class => "input-xlarge", :id => "input01", :placeholder => "Name:" %>
+    <%= f.text_field :name, :class => "span4", :placeholder => "Name:" %>
   </div>
  </div>
   
   <div class="control-group">
     <div class="controls">
-    <%= f.text_field :email, :class => "input-xlarge", :id => "input01", :placeholder => "Email:" %>
+    <%= f.text_field :email, :class => "span4", :placeholder => "Email:" %>
+  </div>
+ </div> 
+  
+   
+  
+  
+  <div class="input-append date" id="datepicker" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+    <input class="span2" size="16" type="text" value="Leaving:">
+    <span class="add-on"><i class="icon-th"></i></span>
+    
+</div>
+   
+  <script>
+  
+ $("#datepicker").datepicker()
+  .on('show', function(ev){                 
+      var today = new Date();
+      var t = today.getDate() + "-" + today.getMonth() + "-" + today.getFullYear();
+      $('#datepicker').data({date: t}).datepicker('update');
+  });
+  </script>
+  
+  <div class="h"> 
+  <div class="control-group">
+    <div class="controls">
+     
+     <%= f.text_field :subject, :class => "h", :value => (@trip.title) %>
+    </div>
   </div>
  </div> 
   
   <div class="control-group">
     <div class="controls">
-    <%= f.text_field :subject, :class => "input-xlarge", :id => "input01", :placeholder => "Arriving:" %>
+     <%= f.text_area :body, :class => "input-xlarge3", :placeholder => "Message:", :id => "textarea", :rows => "4" %>
   </div>
  </div> 
   
-  <div class="control-group">
+ <div class="control-group">
     <div class="controls">
-    <%= f.text_field :subject, :class => "input-xlarge", :id => "input01", :placeholder => "Leaving:" %>
-  </div>
- </div> 
-  
 
-  <div class="control-group">
-     <div class="controls">            
-    <%= f.text_area :message, :class => "input-xlarge", :id => "textarea", :rows => "3", :placeholder => "Message" %>
-  </div>
+<label class="checkbox inline">
+  <input type="checkbox" id="inlineCheckbox3" value="option1"> Send me emails with exclusive updates
+</label>
+    </div>
  </div>
- 
- 
  
  <div class="control-group">
  	<div class="controls">    
-    <%= f.submit :class => " btn btn-primary btn-large ", :value => "Send Message" %>
+   <%= f.submit :class => " btn btn-primary btn-large ", :value => "Send Message" %>
     </div>
  </div>
   
 <% end %>
+
+ 
 
   <div class="control-group">
  	<div class="controls">    
