--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -69,7 +69,8 @@
              
              _toggleInfo: false,
              showInfo:true,
-            
+            maxScaleRatio: 2,
+            minScaleRatio: 2,
              
        
        });
