--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -437,7 +437,8 @@ input, textarea, select, .uneditable-input {
 
 
 .input-xlarge3 {	
-	width: 278px;
+	width: 508px;
+	height: 120px;
 	
 }
 
@@ -462,7 +463,7 @@ input, textarea, select, .uneditable-input {
 #myModal {
 	
 	
-	text-align: center;
+	padding: 10px;
 	
 }
 
