--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -45,7 +45,11 @@
          <ul>                        
              <%= form_for @search do |f| %>             
                  
+                <li class="droper">  <%= f.collection_select :continent_id_in, Continent.all, :id, :name, :include_blank => true, :prompt => "All continents" %>    </li>                
+
+                 
                 <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
+
                 <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories"  %>  </li>     
                 
                 <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
@@ -53,6 +57,9 @@
            <% end %>
          </ul>
   
+    
+   
+    
     
   
    <div style="clear:both;"></div>
