--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -3,6 +3,13 @@
 
 <h2>Opps, You've missed something</h2>
 
+ <div class="alert alert-error">
+     <%= @message.errors.full_messages.inspect %>
+ </div>
+
+<p>  Ask them about availibility, prices and possible options you are interested in (e.g. lessons, rentals, food and etc.) </p> 
+ 
+
 <%= render 'form' %>
 
 <%= link_to 'Show', @trip %> |
