--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -52,6 +52,9 @@
 
                 <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories"  %>  </li>     
                 
+                 <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "All budgets" %>    </li>                
+
+                
                 <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
       	
            <% end %>
