--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,8 @@
 <div class="tripshow">
   
   <div class="abouth">
-    <h2> Thril Engine helps you find the right places to go for your next adventure trip. Find by type of activity, budget and location.</h2>
+    <h2> Thril Engine helps you find the right places to go for your next adventure trip </h2> 
+    <h3> Find by type of activity, budget and location.</h3>
   </div>
 
 <br></br>
