--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li> <%= link_to "All Locations", locations_path %>  </li>
           <li> <%= link_to "The Concept", about_path %>  </li>
           <li><%= link_to "Get Listed", pricing_path, :class => "listed" %>  </li>
-          <li><%= link_to "Contact", about_path %>  </li>
+          <li><%= link_to "Inspiration", "http://thrillengine.tumblr.com" %>  </li>
          <% if signed_in? %>
           <li><%= link_to "Profile", current_user %>  </li>
          <% end %>
