--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -12,12 +12,15 @@
     <a href="www.thrillengine.com">Home</a> / <span class="divider"></span>
   </li>
   <li>
-    <%= link_to @trip.location, location_path %> / <span class="divider"></span>
+    <%= link_to @trip.location, location_path(@trip.location) %> / <span class="divider"></span>
   </li>
   <li>  
-  	<%= link_to @trip.categories.map(&:name).to_sentence, category_path %>  <span class="divider"></li>
-  
+  	<%= @trip.categories.map(&:name).to_sentence %>  <span class="divider"></li>
+  <li>  
+  	<%= @trip.types.map(&:name).to_sentence %>  <span class="divider"></li>
  </ul>
+
+
 
 <br></br>
 
