--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,9 +10,10 @@
                 <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
                   
                
-                 <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "All budgets" %>    </li>                
-
-                
+                 <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "All budgets" %>    </li>  
+                 
+                  <li class="droper">  <%= f.collection_select :types_id_equals, Type.all, :id, :name, :include_blank => true, :prompt => "All Types" %>    </li>
+                                              
                 <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
       	
            <% end %>
