--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,60 +1,57 @@
 <div class="tripshow">
   
   <div class="abouth">
-    <h2> Thril Engine helps you find the right places to go for your next adventure trip </h2> 
-    <h3> Find by type of activity, budget and location.</h3>
+    <h2> Thrill Engine helps you find the right places to go for your next adventure trip </h2> 
+    <h4> Find by type of activity, budget and location.</h4>
   </div>
 
 <br></br>
-
- <div class="row">
-  <div class="span9">
-  <h3>Why thrill engine?</h3>
-  <p>  Because life begins at the end of you comfort zone.
-Even tough traveling is essential part of adventorous lifestyle, it can be quite boring. Thrill Engine brings you the opposite, with more focus on the activities than the stay. 
-  </p>
-
-<br></br>
+ 
 
   <h3>How it is different ?</h3>
-  <p>  Most travel sites are all about offering you the best price for the same listings. Thrill Engine is all about offering the best solution for your surf, snow, kite trips.
-Thrill engine works directly with listing owners.   
+  <br></br> 
+  <p>  Most travel sites are all about offering you the best price for the same listings. Thrill Engine is all about offering the best solution for your adventure.
+   
   </p> 
 
 <br></br>
 
   <h3> How much does it costs to get listed?</h3>
-  <p>  Starting at 99$ yearly.  </p>
+  <br></br> 
+  <p>   starts at $99/year </p>
   <p> Which includes: </p>
 
     <ul>
-	   <li> Unlimited images   </li>
-	   <li>  a video  </li>
-	   <li> link back to your website   </li>
-	   <li>  weekly placement in the front page  </li>
-	   <li> better rankings in category and location pages  </li>
+	   <li> Unlimited images  </li>
+	   <li> video  </li>
+	   <li> link back to your website  </li>	   
+	   <li> better rankings  </li>
     </ul>
 
 <br></br>
 
   <h3> Why pay ?</h3>
-  <p>  That keeps the site high quality. You are one of few not one of many. It takes a lot of time and energy to check every listing. However there is a free plan with limited options available as well, please contact me for more info. </p>
-  <p> 99 per year is still less than competitors, and free sites are open for everyone. </p>
+  <br></br> 
+  <p>  That keeps the site high quality. You are one of few not one of many. It takes a lot of time and energy to check every listing. However there is a free plan with limited options available, please contact for more info. </p>
+  
 
 <br></br> 
 
 
   <h3> How will be promoted ? </h3>
+  <br></br> 
   <p> Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), trough social media, and weekly email lists. </p>
 
 <br></br>
 
   <h3> Who is behind this ? </h3>
+  <br></br> 
   <p> Thrill Engine is developed, designed and promoted by <%= link_to "http://emiilsw.staticloud.com", "http://emiilsw.staticloud.com/" %> .</p>
 
 <br></br>
 
   <h3> Contact: </h3>
+  <br></br> 
   <p>  <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </p>
  
    </div>
