--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -21,30 +21,26 @@ $lightGray: #999;
   padding-bottom: 8px;
   margin-top: 2px;
   margin-bottom: 2px;
-  color: #5e5a5a ;
-  
+  color: #5e5a5a ;  
 }
 
 
-.nav-pills a:hover {
-  
- background:none;
- text-decoration:underline;
+.nav-pills a:hover {  
+  background:none;
+  text-decoration:underline;
 }
 
 
 
 #logo {
-  
-    margin-left:5px;
+  margin-left:5px;
      
 }
 
 
 
 
-.headline {
-	
+.headline {	
 	background: url(im3.png);
     margin-top: -310px;
 	position: absolute;
@@ -57,58 +53,54 @@ $lightGray: #999;
 	color: #fff;
 }
 
-.lead {
-	
-	font-weight: bold;
-	
-	
+.lead {	
+	font-weight: bold;		
 }
 
 .carousel-caption2 {
-	
-	background: none;
-	color: #fff;
-	font-size: 24px;	
-	
+    background: none;	
+	font-size: 24px;		
 	position: absolute;
     left: 65px;
     right: 0;
     bottom: 0;
     top: 260px;
-    padding: 10px 15px 5px;
-	
+    padding: 10px 15px 5px;	
 }
 
 .carousel-caption2 a {
+		
+	font-size: 18px; 
 	
-	color: #00ddff; 
 	
 }
 
 #myCarousel {
 	
 	margin-bottom: 0px;
-	  
+	  	
+}
+
+#myCarousel a {
+	
+	color: #ff549b;
 	
 }
 
 .carousel-control2{
 	
-
-  position: absolute;
-  top: 40%;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  margin-top: -10px;
-  
-  
-  
-    		
+   position: absolute;
+   top: 40%;
+   left: 0px;
+   width: 100%;
+   height: 100%;
+   margin-top: -10px;
+      		
 }
 
-.carousel-control2.left {
-	
+
+
+.carousel-control2.left {	
 	background:url(left22.png) no-repeat ;
 	height:59px;
 	width:59px;
@@ -117,10 +109,11 @@ $lightGray: #999;
 	
 }
 
-
-.carousel-control2.right {
+.carousel-control2.left:hover{
+	background:url(left22.png) no-repeat ;
 	
-	
+}
+.carousel-control2.right {		
     left:auto;
     right:-12px;
 	background:url(right22.png) no-repeat ;	
@@ -128,6 +121,9 @@ $lightGray: #999;
 	width:59px;
 }
 
+.carousel-control2.right:hover {
+	background:url(right22.png) no-repeat ;	
+}
 
 .listed {	
    cursor:pointer;
@@ -164,18 +160,25 @@ $lightGray: #999;
 	
 }
 
+
+
+.container a:hover {
+	
+	text-decoration: underline;
+    background: none;
+    color: $grayDarker;
+	
+}
+
 html {
   overflow-y: scroll;
-  border-top: 5px $grayMediumLight solid;
+  border-top: 2px #000 solid;
 }
 
 body {
   margin-top: 50px;
   background: url(lp.png);
-  
-  
-  
-  
+    
 }
 
 section {
@@ -227,10 +230,7 @@ p {
   line-height: 1.7em;
 }
 
-a:hover {
-  text-decoration: underline;
-  background: none;	
-}
+
 
 /* footer */
 
@@ -243,6 +243,7 @@ footer {
     color: $gray;
     &:hover { 
       color: $grayDarker;
+      background: none;
     }
   }  
   small { 
@@ -407,7 +408,8 @@ input, textarea, select, .uneditable-input {
 }
 
 .book_button:hover {	
-   background-color:#80ff00;
+   
+   background:#80ff00;
    text-decoration:none;
 }
 
