--- a/app/views/pages/thank_you.html.erb
+++ b/app/views/pages/thank_you.html.erb
@@ -1,5 +1,5 @@
 
 
 
-<h2> Thank You! Your message is sent. Property owner will contact you in short! </h2>
+<h2> Thank You! Your message is sent.</h2>
 
